Fix years navigation width for XXL screens
Otherwise it looks off, the cards are cut

--- a/assets/src/scss/blocks/Timeline/TimelineStyle.scss
+++ b/assets/src/scss/blocks/Timeline/TimelineStyle.scss
@@ -604,6 +604,10 @@
     @include x-large-and-up {
       max-width: 986px;
     }
+
+    @include xx-large-and-up {
+      max-width: 1096px;
+    }
   }
 
   .years-navigation-items {
